data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1619.wast
;; 10. **Test Description:**     A `br_table` instruction driven by a variable index in a branching scenario that guarantees some paths always lead to an `unreachable` while others are valid to induce traps selectively.    **Constraint Checked:** Examines handling and trapping based on selective branching paths in `br_table`.    **Edge Case Relation:** Ensures selective path-triggered traps within `br_table` logic.

(assert_invalid
  (module
    (func $test_func (param $x i32) (result i32)
      (block (result i32)
        (br_table 0 1 (local.get $x))
        (unreachable)
        (i32.const 0)
      )
      (i32.const 0)
    )
  )
  "type mismatch"
)